# Crew_AI

my_crew_guru/: .gitignore  README.md  pyproject.toml
my_crew_guru/src/my_crew_guru/: crew.py  main.py
my_crew_guru/src/my_crew_guru/config/: agents.yaml  tasks.yaml
my_crew_guru/src/my_crew_guru/tools/: email_tool.py  weather_tool.py
