[project]
name = "my_crew_guru"
version = "0.1.0"
description = "My_Crew_Guru using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
my_crew_guru = "my_crew_guru.main:run"
run_crew = "my_crew_guru.main:run"
train = "my_crew_guru.main:train"
replay = "my_crew_guru.main:replay"
test = "my_crew_guru.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
